--- a/src/components/css/main.css
+++ b/src/components/css/main.css
@@ -1,4 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+/* Variables */
+/* body.dark {
+  --bg-black-900: #fff;
+  --bg-black-100: #353535;
+  --bg-black-700: #ffffff;
+  --bg-black-50: #2b2c2f;
+  --bg-opacity: rgba(43, 44, 47, 0.5);
+  --text-black-900: #ffffff;
+  --text-black-700: #ffffff;
+  --text-black-600: #bbbbbb;
+  --outer-shadow: 3px 3px 3px #222327, -3px -3px 3px #363636;
+  --outer-shadow-0: 0 0 0 #222327, 0 0 0 #363636;
+  --inner-shadow: inset 3px 3px 3px #222327, inset -3px -3px 3px #363636;
+  --inner-shadow-0: inset 0 0 0 #222327, inset 0 0 0 #363636;
+} */
+/* Variables */
 /* Effects */
 .effect-wrap .effect {
   position: absolute;
@@ -223,14 +239,18 @@ html {
 }
 
 body {
+  min-height: 100vh;
   background-color: #000 !important;
   font-family: "Press Start 2P", cursive;
   overflow-x: hidden;
+  background-image: url("../../assets/left-blur.png"), url("../../assets/right-blur.png");
+  background-repeat: no-repeat, no-repeat;
+  background-size: cover, 100% 80%;
 }
 
 /* Navbar */
 nav {
-  padding: 15px 80px;
+  padding: 15px 0;
 }
 
 nav .navbar-brand {
@@ -306,6 +326,51 @@ nav .navbar-nav .nav-item:hover a::after {
           transform: scale(1.2);
 }
 
+nav .navbar-nav .active.nav-item a {
+  position: relative;
+  text-decoration: none;
+  color: #949494 !important;
+  transition: 0.2s ease;
+  -webkit-transition: 0.2s ease;
+}
+
+nav .navbar-nav .active.nav-item a::before, nav .navbar-nav .active.nav-item a::after {
+  position: absolute;
+  display: inline-block;
+  opacity: 1;
+  color: #fff;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+}
+
+nav .navbar-nav .active.nav-item a::before {
+  content: "[";
+  top: -3px;
+  left: -14px;
+}
+
+nav .navbar-nav .active.nav-item a::after {
+  content: "]";
+  top: -3px;
+  right: -14px;
+}
+
+nav .navbar-nav .active.nav-item:hover a::before {
+  -webkit-transform: translate(0);
+          transform: translate(0);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+nav .navbar-nav .active.nav-item:hover a::after {
+  -webkit-transform: translate(0);
+          transform: translate(0);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
 /* Navbar */
 /* Nav fixed */
 nav.fixed {
@@ -323,22 +388,6 @@ nav.fixed {
 }
 
 /* Nav fixed */
-/* Variables */
-/* body.dark {
-  --bg-black-900: #fff;
-  --bg-black-100: #353535;
-  --bg-black-700: #ffffff;
-  --bg-black-50: #2b2c2f;
-  --bg-opacity: rgba(43, 44, 47, 0.5);
-  --text-black-900: #ffffff;
-  --text-black-700: #ffffff;
-  --text-black-600: #bbbbbb;
-  --outer-shadow: 3px 3px 3px #222327, -3px -3px 3px #363636;
-  --outer-shadow-0: 0 0 0 #222327, 0 0 0 #363636;
-  --inner-shadow: inset 3px 3px 3px #222327, inset -3px -3px 3px #363636;
-  --inner-shadow-0: inset 0 0 0 #222327, inset 0 0 0 #363636;
-} */
-/* Variables */
 /* About info */
 .home-info {
   text-align: center;
@@ -406,3 +455,45 @@ nav.fixed {
 }
 
 /* About info  */
+.about-info {
+  margin-top: 100px;
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.about-info__image {
+  width: 450px;
+  margin-right: 20px;
+}
+
+.about-info__image img {
+  display: block;
+  width: 100%;
+  border-radius: 25px;
+}
+
+.about-info__text {
+  color: #eff0f4;
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+}
+
+.about-me__title {
+  font-size: 20px;
+}
+
+.about-me__subtitle {
+  margin: 20px 0;
+}
+
+.about-me__description {
+  line-height: 30px;
+}
