--- a/src/components/styles/_variables.scss
+++ b/src/components/styles/_variables.scss
@@ -29,4 +29,7 @@ $inner-shadow-0: inset 0 0 0 #d0d0d0, inset 0 0 0 #f8f8f8;
   --inner-shadow: inset 3px 3px 3px #222327, inset -3px -3px 3px #363636;
   --inner-shadow-0: inset 0 0 0 #222327, inset 0 0 0 #363636;
 } */
+$homeButtonColor: #2b2b2b;
+$homeButtonColor2: #faff00;
+$socialIcons: #faff00;
 /* Variables */
