--- a/src/components/css/main.css
+++ b/src/components/css/main.css
@@ -238,6 +238,10 @@ html {
   display: inline-block;
 }
 
+a {
+  text-decoration: none !important;
+}
+
 body {
   min-height: 100vh;
   background-color: #000 !important;
@@ -391,8 +395,7 @@ nav.fixed {
 /* About info */
 .home-info {
   text-align: center;
-  padding: 0 70px;
-  margin-top: 100px;
+  padding: 100px 70px;
 }
 
 .home-info .side1 {
@@ -456,7 +459,7 @@ nav.fixed {
 
 /* About info  */
 .about-info {
-  margin-top: 100px;
+  padding: 100px 0;
   min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -469,6 +472,9 @@ nav.fixed {
 }
 
 .about-info__image {
+  -ms-flex-item-align: stretch;
+      -ms-grid-row-align: stretch;
+      align-self: stretch;
   width: 450px;
   margin-right: 20px;
 }
@@ -495,5 +501,48 @@ nav.fixed {
 }
 
 .about-me__description {
-  line-height: 30px;
+  line-height: 24px;
+  opacity: 0.7;
+}
+
+.about-me__info {
+  margin-top: 20px;
+}
+
+.about-me__info > div {
+  margin-bottom: 12px;
+  font-weight: 300;
+}
+
+.about-me__info span {
+  color: #fff;
+  display: inline-block;
+  position: relative;
+  font-size: 18px;
+  font-weight: 600;
+  width: 150px;
+  margin-right: 30px;
+  opacity: 1 !important;
+}
+
+.about-me__info span::after {
+  content: ":";
+  position: absolute;
+  right: 0;
+}
+
+.footer {
+  padding: 20px 0 0;
+  border-top: 1px solid #aaaaaa;
+  text-align: center;
+}
+
+.footer p {
+  font-size: 17px;
+  color: white;
+  font-family: "Montserrat", "sans-serif";
+}
+
+.footer p svg {
+  color: red;
 }
