--- a/src/components/styles/animation.scss
+++ b/src/components/styles/animation.scss
@@ -102,3 +102,42 @@
     border-top-right-radius: 48%;
   }
 }
+
+@keyframes portfolioAnim {
+  from {
+    transform: translateY(90px);
+    opacity: 0.3;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes portfolioAnim {
+  from {
+    transform: translateY(90px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@-o-keyframes portfolioAnim {
+  from {
+    transform: translateY(90px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+.portfolioAnim {
+  animation-name: portfolioAnim;
+  -webkit-animation-name: portfolioAnim;
+  -moz-animation-name: portfolioAnim;
+  -o-animation-name: portfolioAnim;
+}
