--- a/src/components/styles/blocks/_home-section.scss
+++ b/src/components/styles/blocks/_home-section.scss
@@ -1,8 +1,7 @@
 /* About info */
 .home-info {
   text-align: center;
-  padding: 0 70px;
-  margin-top: 100px;
+  padding: 100px 70px;
   .side1 {
     margin: 20px 0;
   }
