--- a/src/components/styles/main.scss
+++ b/src/components/styles/main.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 @import "variables";
+@import "mixins";
 @import "effects";
 @import "general";
 @import "blocks/blocks-all";
