--- a/src/components/styles/blocks/_blocks-all.scss
+++ b/src/components/styles/blocks/_blocks-all.scss
@@ -1,6 +1,7 @@
 @import "navbar";
 @import "home-section";
-@import "about-section";
+@import "about-info-section";
 @import "page-info";
 @import "portfolio";
+@import "reviews";
 @import "footer";
