--- a/src/components/styles/blocks/_footer.scss
+++ b/src/components/styles/blocks/_footer.scss
@@ -11,3 +11,13 @@
     }
   }
 }
+// Media
+
+// Footer
+@media screen and (max-width: 500px) {
+  .footer {
+    p {
+      font-size: 13px;
+    }
+  }
+}
