--- a/src/components/styles/blocks/_about-info-section.scss
+++ b/src/components/styles/blocks/_about-info-section.scss
@@ -51,3 +51,47 @@
     }
   }
 }
+//  About me
+
+@media screen and (max-width: 1200px) {
+  .about-info {
+    .about-info2 {
+      display: inline-block;
+      padding: 20px 180px;
+      img {
+        width: 100% !important;
+      }
+      span {
+        .aboutText {
+          padding: 15px 0px;
+          font-size: 22px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .about-info {
+    display: block;
+    &__image {
+      margin: 0 0 20px 0;
+    }
+    .about-me__title {
+      text-align: center;
+    }
+    .about-info2 {
+      display: inline-block;
+      padding: 20px 150px;
+      img {
+        width: 100% !important;
+      }
+      span {
+        .aboutText {
+          padding: 15px 0px;
+          font-size: 20px;
+        }
+      }
+    }
+  }
+}
