--- a/src/components/styles/blocks/_home-section.scss
+++ b/src/components/styles/blocks/_home-section.scss
@@ -10,7 +10,7 @@
   }
   &__subtitle {
     font-size: 40px;
-    font-display: wrap;
+    word-wrap: break-word;
     color: #fff;
     font-weight: 700;
   }
@@ -21,36 +21,18 @@
     color: rgba(255, 255, 255, 0.5);
     margin: 15px 3px 60px;
   }
-  // .side2 {
-  //   flex: 0.7;
-  //   &-image {
-  //     width: 550px;
-  //     height: 550px;
-  //     background-color: rgba(255, 255, 255, 0);
-  //     animation: anim 20s linear infinite;
-  //   }
-  //   .side2__image {
-  //     position: relative;
-  //     width: 100%;
-  //     border-bottom-left-radius: 70%;
-  //     border-top-left-radius: 43%;
-  //     border-bottom-right-radius: 50%;
-  //     border-top-right-radius: 43%;
-  //     animation: anim 20s linear infinite alternate-reverse;
-  //   }
-  // }
   .socialNet {
     margin-top: 45px;
-    .links {
-      padding: 0 30px 0 0;
-      .iconSvg {
-        font-size: 35px;
-        color: #ffffff;
-        &:hover {
-          color: $socialIcons;
-        }
-      }
+    .links:not(:last-child) {
+      margin-right: 20px;
     }
+    .iconSvg {
+      font-size: 35px;
+      color: #ffffff;
+    }
+  }
+  svg:hover {
+    filter: drop-shadow(0 0 10px #0d6efd);
   }
 }
 .button-group {
@@ -70,3 +52,258 @@
   }
 }
 /* About info  */
+
+// home
+
+@media screen and (max-width: 1200px) {
+  .aboutinfo {
+    .aboutinfo2 {
+      display: flex !important;
+      padding: 75px 35px;
+
+      .side2 {
+        .myImage {
+          width: 320px !important;
+        }
+      }
+      .side1 {
+        width: 100% !important;
+        h1 {
+          font-size: 50px !important;
+        }
+        p {
+          font-size: 20px;
+          width: 75% !important;
+          margin: 15px 0 25px;
+        }
+        .buttons {
+          .linkBtn {
+            padding: 10px;
+            font-size: 20px;
+          }
+        }
+        .socialNet {
+          .links {
+            padding: 0 10px 0 10px;
+            svg {
+              font-size: 20px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .aboutinfo {
+    .aboutinfo2 {
+      display: flex;
+      padding: 75px 30px;
+      .side2 {
+        .myImage {
+          width: 320px;
+        }
+      }
+      .side1 {
+        width: 100%;
+        h1 {
+          font-size: 35px !important;
+        }
+        p {
+          font-size: 18px !important;
+          width: 100% !important;
+          margin: 15px 0 25px !important;
+        }
+        .buttons {
+          .linkBtn {
+            padding: 10px 10px;
+            font-size: 20px;
+          }
+        }
+        .socialNet {
+          .links {
+            padding: 0 10px 0 10px;
+            svg {
+              font-size: 20px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .home-info__subtitle {
+    font-size: 30px;
+  }
+  /* .aboutinfo {
+    .aboutinfo2 {
+      width: 100% !important;
+      display: inline-block !important;
+      padding: 30px 0 30px 0;
+
+      .side2 {
+        text-align: center;
+        .myImage {
+          width: 320px !important;
+        }
+      }
+      .side1 {
+        text-align: center !important;
+        width: 100% !important;
+
+        h1 {
+          font-size: 35px;
+        }
+        p {
+          font-size: 22px;
+          width: 100% !important;
+          padding: 0 15px;
+          text-align: center;
+
+          margin: 15px 0 25px;
+        }
+        .buttons {
+          .linkBtn {
+            padding: 10px;
+            font-size: 20px;
+          }
+        }
+        .socialNet {
+          .links {
+            padding: 0 10px 0 10px;
+          }
+        }
+      }
+    }
+  } */
+}
+
+/* @media screen and (max-width: 500px) {
+  .aboutinfo {
+    .aboutinfo2 {
+      display: inline-block !important;
+      padding: 30px 0 30px 0;
+
+      .side2 {
+        text-align: center;
+        .myImage {
+          width: 210px !important;
+        }
+      }
+      .side1 {
+        text-align: center;
+        width: 100%;
+        h1 {
+          font-size: 27px;
+        }
+        p {
+          font-size: 15px;
+          width: 100% !important;
+          padding: 0 15px;
+          margin: 15px 0 25px;
+        }
+        .buttons {
+          .linkBtn {
+            padding: 10px;
+            font-size: 15px;
+          }
+        }
+        .socialNet {
+          .links {
+            padding: 0 10px 0 10px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 370px) {
+  .aboutinfo {
+    .aboutinfo2 {
+      padding: 30px 0 30px 0;
+      display: inline-block !important;
+      .side2 {
+        text-align: center;
+        .myImage {
+          width: 180px !important;
+        }
+      }
+      .side1 {
+        text-align: center;
+        width: 100%;
+        display: flex !important;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        h1 {
+          font-size: 27px;
+        }
+        p {
+          font-size: 15px;
+          width: 100%;
+          padding: 0 15px;
+          margin: 15px 0 25px;
+        }
+        .buttons {
+          .linkBtn {
+            padding: 10px;
+            font-size: 15px;
+          }
+        }
+        .socialNet {
+          .links {
+            padding: 0 10px 0 10px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 320px) and (max-width: 330px) {
+  .aboutinfo {
+    .aboutinfo2 {
+      display: inline-block !important;
+      padding: 0;
+      .side2 {
+        text-align: center;
+        .myImage {
+          width: 170px !important;
+        }
+      }
+      .side1 {
+        text-align: center;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        h1 {
+          font-size: 25px;
+          padding: 0 5px;
+        }
+        p {
+          font-size: 15px;
+          width: 100%;
+          padding: 0 5px;
+          margin: 15px 0 25px;
+        }
+        .buttons {
+          .linkBtn {
+            padding: 10px;
+            font-size: 15px;
+          }
+        }
+        .socialNet {
+          .links {
+            padding: 0 10px 0 10px;
+          }
+        }
+      }
+    }
+  }
+} */
