--- a/src/components/styles/blocks/_navbar.scss
+++ b/src/components/styles/blocks/_navbar.scss
@@ -2,16 +2,22 @@
 nav {
   padding: 15px 0;
   .navbar-brand {
-    color: #fff !important;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 205px;
     text-decoration: none;
     font-family: "Press Start 2P", cursive;
-    font-size: 10px;
+    font-size: 18px;
     b {
       font-weight: 500;
     }
   }
   .navbar-nav {
     margin-left: auto;
+    a {
+      color: #fff !important;
+    }
     .nav-item {
       margin: 20px;
       font-size: 20px;
@@ -19,7 +25,6 @@ nav {
       a {
         position: relative;
         text-decoration: none;
-        color: #949494 !important;
         transition: 0.2s ease;
         -webkit-transition: 0.2s ease;
         &::before,
@@ -31,13 +36,13 @@ nav {
           transition: all 0.3s linear;
         }
         &::before {
-          content: "[";
+          content: "{";
           top: -3px;
           left: -14px;
           transform: translateX(30px);
         }
         &::after {
-          content: "]";
+          content: "}";
           top: -3px;
           right: -14px;
           transform: translateX(-30px);
@@ -60,7 +65,6 @@ nav {
       a {
         position: relative;
         text-decoration: none;
-        color: #949494 !important;
         transition: 0.2s ease;
         -webkit-transition: 0.2s ease;
         &::before,
@@ -73,39 +77,229 @@ nav {
           transition: all 0.3s linear;
         }
         &::before {
-          content: "[";
+          content: "{";
           top: -3px;
           left: -14px;
         }
         &::after {
-          content: "]";
-          top: -3px;
-          right: -14px;
+          content: "}";
+          top: 0d6efd;
+        }
+        &:hover a::before {
+          transform: translate(0);
+          transform: scale(1.2);
+        }
+        &:hover a::after {
+          transform: translate(0);
+          transform: scale(1.2);
         }
       }
-      &:hover a::before {
-        transform: translate(0);
-        transform: scale(1.2);
+    }
+  }
+  /* Navbar */
+  .navbar-brand:hover {
+    filter: drop-shadow(-8px -4px 10px #0d6efd);
+  }
+  /* Nav fixed */
+  nav.fixed {
+    padding: 0 80px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 99;
+    width: 100%;
+    backdrop-filter: blur(10px);
+    background-color: #000000cf;
+    box-shadow: 0 5px 15px #0c0c0cde;
+  }
+  /* Nav fixed */
+}
+
+$togglerMenu: #0d6efd;
+
+// home
+
+@media screen and (max-width: 1200px) {
+  nav {
+    padding: 12px !important;
+    .navbar-brand {
+      font-size: 15px;
+      padding: 0 10px;
+    }
+    .navbar-toggler {
+      background-color: $togglerMenu !important;
+      border-radius: 20px;
+      span {
+        font-size: 15px;
       }
-      &:hover a::after {
-        transform: translate(0);
-        transform: scale(1.2);
+    }
+    .navbar-nav {
+      .nav-item {
+        margin: 20px 20px !important;
+        font-size: 18px !important;
+        text-align: center;
+      }
+    }
+  }
+  .aboutinfo {
+    .aboutinfo2 {
+      display: flex !important;
+      padding: 75px 35px;
+
+      .side2 {
+        .myImage {
+          width: 320px !important;
+        }
+      }
+      .side1 {
+        width: 100% !important;
+        h1 {
+          font-size: 50px !important;
+        }
+        p {
+          font-size: 20px;
+          width: 75% !important;
+          margin: 15px 0 25px;
+        }
+        .buttons {
+          .linkBtn {
+            padding: 10px;
+            font-size: 20px;
+          }
+        }
+        .socialNet {
+          .links {
+            padding: 0 10px 0 10px;
+            svg {
+              font-size: 20px;
+            }
+          }
+        }
       }
     }
   }
 }
-/* Navbar */
 
-/* Nav fixed */
-nav.fixed {
-  padding: 0 80px;
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 99;
-  width: 100%;
-  backdrop-filter: blur(10px);
-  background-color: #000000cf;
-  box-shadow: 0 5px 15px #0c0c0cde;
+@media screen and (max-width: 1024px) {
+  nav {
+    padding: 12px !important;
+    .navbar-brand {
+      font-size: 15px;
+      padding: 0 10px;
+      width: 205px;
+    }
+    .navbar-toggler {
+      background-color: $togglerMenu;
+      border-radius: 20px;
+      span {
+        font-size: 15px;
+      }
+    }
+    .navbar-nav {
+      .nav-item {
+        margin: 20px 20px !important;
+        font-size: 18px !important;
+        text-align: center;
+      }
+    }
+  }
 }
-/* Nav fixed */
+
+@media screen and (max-width: 767px) {
+  nav {
+    padding: 12px !important;
+
+    .navbar-brand {
+      span {
+        display: none;
+      }
+      width: 205px;
+    }
+    .navbar-toggler {
+      background-color: $togglerMenu !important;
+      border-radius: 20px;
+      span {
+        font-size: 15px;
+      }
+    }
+    .navbar-nav {
+      .nav-item {
+        margin: 20px 0 !important;
+        font-size: 17px !important;
+        text-align: center;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  nav {
+    padding: 12px !important;
+    .navbar-brand {
+      font-size: 18px;
+      padding: 0 10px;
+    }
+    .navbar-toggler {
+      background-color: $togglerMenu !important;
+      border-radius: 20px;
+      span {
+        font-size: 15px;
+      }
+    }
+    .navbar-nav {
+      .nav-item {
+        margin: 20px 0 !important;
+        font-size: 17px !important;
+        text-align: center;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 370px) {
+  nav {
+    padding: 12px !important;
+    .navbar-brand {
+      font-size: 18px;
+      padding: 0 10px;
+    }
+    .navbar-toggler {
+      background-color: $togglerMenu !important;
+      border-radius: 20px;
+      span {
+        font-size: 15px;
+      }
+    }
+    .navbar-nav {
+      .nav-item {
+        margin: 20px 0 !important;
+        font-size: 17px !important;
+        text-align: center;
+      }
+    }
+  }
+}
+
+@media (min-width: 320px) and (max-width: 330px) {
+  nav {
+    padding: 12px !important;
+    .navbar-brand {
+      font-size: 18px;
+      padding: 0 10px;
+    }
+    .navbar-toggler {
+      background-color: $togglerMenu !important;
+      border-radius: 20px;
+      span {
+        font-size: 15px;
+      }
+    }
+    .navbar-nav {
+      .nav-item {
+        margin: 20px 0 !important;
+        font-size: 17px !important;
+        text-align: center;
+      }
+    }
+  }
+}
