--- a/src/components/styles/blocks/_page-info.scss
+++ b/src/components/styles/blocks/_page-info.scss
@@ -1,10 +1,29 @@
 .titles {
   text-align: center;
-  margin-top: 75px;
+  margin-top: 50px;
+  transition: 0.3s linear;
+  text-transform: uppercase;
+  cursor: pointer;
   .title1 {
     @include PageTitle1();
+    display: inline-block;
+    position: relative;
+    &::after {
+      position: absolute;
+      content: "";
+      height: 2px;
+      width: 56.7%;
+      bottom: -2px;
+      left: 0;
+      background-color: #fff;
+    }
   }
   .title2 {
     @include PageTitle2();
+  }
+}
+@media screen and (max-width: 1024px) {
+  .titles {
+    display: none;
   }
 }
