--- a/src/components/styles/_general.scss
+++ b/src/components/styles/_general.scss
@@ -53,15 +53,13 @@ body {
   padding: 12px 10px;
   margin: 5px;
   border-radius: 999px;
-
   color: white;
   background: none;
-
   position: relative;
   overflow: hidden;
-
   text-transform: uppercase;
   border: 1px solid white !important;
+  cursor: pointer;
 
   & .text-container {
     display: block;
@@ -72,7 +70,6 @@ body {
   & .text {
     display: block;
     position: relative;
-
     font-weight: 900;
   }
 
@@ -122,4 +119,7 @@ body {
   &:hover:after {
     transform: translateY(-125%);
   }
+}
+.title1 {
+  text-transform: uppercase;
 }
