--- a/src/components/styles/blocks/_reviews.scss
+++ b/src/components/styles/blocks/_reviews.scss
@@ -42,76 +42,10 @@ Variables
   --max-width: 1170px;
   --fixed-width: 620px;
 }
-/*
-=============== 
-Global Styles
-===============
-*/
-
-h1,
-h2,
-h3,
-h4 {
-  letter-spacing: var(--spacing);
-  text-transform: capitalize;
-  line-height: 1.25;
-  margin-bottom: 0.75rem;
+.title,
+.text-quote {
+  color: #fff !important;
 }
-h1 {
-  font-size: 3rem;
-}
-h2 {
-  font-size: 2rem;
-}
-h3 {
-  font-size: 1.25rem;
-}
-h4 {
-  font-size: 0.875rem;
-}
-p {
-  margin-bottom: 1.25rem;
-  color: var(--clr-grey-5);
-}
-@media screen and (min-width: 800px) {
-  h1 {
-    font-size: 4rem;
-  }
-  h2 {
-    font-size: 2.5rem;
-  }
-  h3 {
-    font-size: 1.75rem;
-  }
-  h4 {
-    font-size: 1rem;
-  }
-  h1,
-  h2,
-  h3,
-  h4 {
-    line-height: 1;
-  }
-}
-/*  global classes */
-
-/* section */
-.section {
-  width: 90vw;
-  margin: 5rem auto;
-  max-width: var(--max-width);
-}
-
-@media screen and (min-width: 992px) {
-  .section {
-    width: 95vw;
-  }
-}
-/*
-=============== 
-Slider
-===============
-*/
 .title {
   text-align: center;
   margin-bottom: 2rem;
@@ -131,13 +65,14 @@ Slider
 .section-center {
   margin: 0 auto;
   margin-top: 4rem;
+  margin-bottom: 4rem;
   width: 80vw;
   height: 450px;
   max-width: 800px;
   text-align: center;
   position: relative;
   display: flex;
-  overflow: hidden;
+  // overflow: hidden;
 }
 .person-img {
   border-radius: 50%;
@@ -173,12 +108,12 @@ article h4 {
 .prev,
 .next {
   position: absolute;
-  top: 200px;
+  top: 130px;
   transform: translateY(-50%);
   background: var(--clr-grey-5);
   color: var(--clr-white);
-  width: 1.25rem;
-  height: 1.25rem;
+  // width: 1.25rem;
+  // height: 1.25rem;
   display: grid;
   place-items: center;
   border-color: transparent;
@@ -189,13 +124,13 @@ article h4 {
 }
 .prev:hover,
 .next:hover {
-  background: var(--clr-primary-5);
+  box-shadow: 1px 1px 4px 5px #0a58ca;
 }
 .prev {
-  left: 0;
+  left: -10px;
 }
 .next {
-  right: 0;
+  right: -10px;
 }
 @media (min-width: 800px) {
   .text {
@@ -206,6 +141,18 @@ article h4 {
     width: 2rem;
     height: 2rem;
     font-size: 1.5rem;
+  }
+}
+@media only screen and (max-width: 576px) {
+  .prev,
+  .next {
+    top: 430px;
+  }
+  .prev {
+    left: 100px;
+  }
+  .next {
+    right: 100px;
   }
 }
 article {
